refactor: update module loader dependencies

--- a/framework/database/CMakeLists.txt
+++ b/framework/database/CMakeLists.txt
@@ -40,6 +40,7 @@ list(APPEND SOURCES database.c database.h)
 list(APPEND SOURCES dbquery.c dbquery.h)
 list(APPEND SOURCES dbresult.c dbresult.h)
 list(APPEND SOURCES db.h)
+list(APPEND SOURCES statement_registry.c statement_registry.h)
 
 if(MySQL_FOUND AND INCLUDE_MYSQL STREQUAL yes)
 	list(APPEND SOURCES mysql.c mysql.h)
