--- a/src/ratelimiter/CMakeLists.txt
+++ b/src/ratelimiter/CMakeLists.txt
@@ -2,10 +2,10 @@ cmake_minimum_required(VERSION 3.12.4)
 
 FILE(GLOB SOURCES *.c *.h)
 
-set(LIB_NAME route)
+set(LIB_NAME ratelimiter)
 
 add_library(${LIB_NAME} STATIC ${SOURCES})
 
 target_include_directories(${LIB_NAME} PUBLIC .)
 
-target_link_libraries(${LIB_NAME} protocols ratelimiter misc ${PCRE_LIBRARIES})
+target_link_libraries(${LIB_NAME} misc)
