feat: add tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,3 +5,10 @@ add_subdirectory(framework)
 add_subdirectory(misc)
 add_subdirectory(protocols)
 add_subdirectory(src)
+
+# Enable tests if building with tests enabled
+option(BUILD_TESTS "Build tests" ON)
+if(BUILD_TESTS)
+    message(STATUS "Core tests found")
+    add_subdirectory(tests)
+endif()
