feat: add IDN2 support for converting domain names to ASCII/Punycode format

--- a/misc/CMakeLists.txt
+++ b/misc/CMakeLists.txt
@@ -6,6 +6,6 @@ set(LIB_NAME misc)
 
 add_library(${LIB_NAME} STATIC ${SOURCES})
 
-target_include_directories(${LIB_NAME} PUBLIC .)
+target_include_directories(${LIB_NAME} PUBLIC . ${IDN2_INCLUDE_DIRS})
 
-target_link_libraries(${LIB_NAME} config ZLIB::ZLIB OpenSSL::Crypto)
+target_link_libraries(${LIB_NAME} config ZLIB::ZLIB OpenSSL::Crypto ${IDN2_LIBRARIES})
