feat: add task manager functionality and tests
- Updated moduleloader.h to include taskmanager.h and removed unused function.
- Modified CMakeLists.txt to include taskmanager_calc.c for testing.
- Created test_taskmanager.c with comprehensive unit tests for daily, weekly, and monthly scheduling functionalities, covering various edge cases and real-time calculations.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -19,6 +19,7 @@ add_executable(
     runner.c
     ${ALL_TEST_FILES}
     httprequestparser_stubs.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/../framework/taskmanager/taskmanager_calc.c
 )
 
 # Link test libraries
